small fixes and file separation

--- a/tema3/platformio.ini
+++ b/tema3/platformio.ini
@@ -16,3 +16,8 @@ lib_deps =
 	arduino-libraries/Servo@^1.2.2
 	fmalpartida/LiquidCrystal@^1.5.0
     Wire
+
+upload_protocol = urclock
+board_build.f_cpu = 12000000L
+monitor_speed = 9600
+monitor_echo = true
